# chess-engine

./: .gitignore  CMakeLists.txt  Chess  ChessTest  Makefile  TODO.txt
CMakeModules/: CodeCoverage.cmake
inc/: Board.hpp  FENParser.hpp  Game.hpp  Helpers.hpp  IBoard.hpp  IFENParser.hpp  IFENParserDelegate.hpp  IObservableBoard.hpp  IObservableBoardObservor.hpp  IPiece.hpp  IPieceFactory.hpp  IPieceMoveLogic.hpp  IPlayer.hpp  ISquare.hpp  ISquareFactory.hpp  KnightMoveLogic.hpp  Location.hpp  Piece.hpp  Player.hpp  SimpleSquare.hpp  SimpleSquareFactory.hpp
inc/mocks/: Board.hpp  FENParser.hpp  FENParserDelegate.hpp  MockSquareFactory.hpp  Piece.hpp  PieceFactory.hpp  PieceMoveLogic.hpp  Square.hpp  SquareFactory.hpp
lib/boost/lib/: libboost_atomic.so.1.61.0  libboost_chrono.so.1.61.0  libboost_container.so.1.61.0  libboost_context.so.1.61.0  libboost_coroutine.so.1.61.0  libboost_date_time.so.1.61.0  libboost_filesystem.so.1.61.0  libboost_graph.so.1.61.0  libboost_locale.so.1.61.0  libboost_log.so.1.61.0  libboost_log_setup.so.1.61.0  libboost_math_c99.so.1.61.0  libboost_math_c99f.so.1.61.0  libboost_math_c99l.so.1.61.0  libboost_math_tr1.so.1.61.0  libboost_math_tr1f.so.1.61.0  libboost_math_tr1l.so.1.61.0  libboost_prg_exec_monitor.so.1.61.0  libboost_program_options.so.1.61.0  libboost_random.so.1.61.0  libboost_regex.so.1.61.0  libboost_serialization.so.1.61.0  libboost_signals.so.1.61.0  libboost_system.so.1.61.0  libboost_thread.so.1.61.0  libboost_timer.so.1.61.0  libboost_type_erasure.so.1.61.0  libboost_unit_test_framework.so.1.61.0  libboost_wave.so.1.61.0  libboost_wserialization.so.1.61.0
lib/googletest/samples/: test
src/: Board.cpp  Board.h  FENParser.cpp  Game.cpp  Helpers.cpp  Helpers.h  Helpers.hpp  KnightMoveLogic.cpp  Location.cpp  Location.h  Piece.cpp  Piece.h  Player.cpp  SimpleSquare.cpp  SimpleSquareFactory.cpp  Square.cpp  Square.h  chess-engine.sublime-workspace  main.cpp
src/Board/inc/: Board.hpp  IBoard.hpp  IObservableBoard.hpp  IObservableSquare.hpp  IObservableSquareFactory.hpp  IObservableSquareObservor.hpp  Location.hpp  ObservableSquare.hpp  ObservableSquareFactory.hpp
src/Board/inc/mocks/: Board.hpp  ObservableSquare.hpp  ObservableSquareFactory.hpp
src/Board/src/: Board.cpp  Location.cpp  ObservableSquare.cpp  ObservableSquareFactory.cpp
src/Board/test/: BoardTest.cpp  ObservableSquareFactoryTest.cpp  ObservableSquareTest.cpp
src/Game/inc/: Game.hpp  IPlayer.hpp  Player.hpp
src/Game/inc/mocks/: Player.hpp
src/Game/test/: PlayerTest.cpp
src/IO/inc/mocks/: FENParserDelegate.hpp
src/IO/test/: FENParserTest.cpp
src/Piece/inc/: KnightMoveLogic.hpp  Piece.hpp  PieceFactory.hpp
src/Piece/inc/mocks/: PieceMoveLogic.hpp
src/Piece/src/: KnightMoveLogic.cpp  Piece.cpp  PieceFactory.cpp
src/Piece/test/: KnightMoveLogicTest.cpp  PieceTest.cpp
src/mocks/: Board.cpp  FENParser.cpp  FENParserDelegate.cpp  MockSquareFactory.cpp  Piece.cpp  PieceMoveLogic.cpp  SquareFactory.cpp
src/test/: TestHelpers.cpp  TestLocation.cpp  TestMain.cpp
test/: TestBoard.cpp  TestFENParser.cpp  TestGame.cpp  TestHelpers.cpp  TestKnightMoveLogic.cpp  TestLocation.cpp  TestMain.cpp  TestPiece.cpp  TestPlayer.cpp  TestSimpleSquare.cpp  TestSimpleSquareFactory.cpp
